--- a/index.html
+++ b/index.html
@@ -1,1 +1,243 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Major+Mono+Display&family=Stylish&display=swap" rel="stylesheet">
+    <link rel="icon" href="resources/favicon.ico" type="image/icon type">
+    <title>portfolio</title>
+</head>
+<body>
+    <header class="position-relative">
+        <nav class="p-5 position-absolute top-50 start-50 translate-middle">         
+            <div class="container-fluid"> 
+                <div class="m-2 px-2">
+                    <div class="row ">
+                        <div class="col-6 "><p class="navi-off">HOME</p></div>
+                        <div class="col-6 text-end"><a href="about.html" >ABOUT</a></div>
+                        <div class="col-12 align-self-center">                            
+                            <h1 class="text-center d-none d-lg-block">portfolio</h1>
+                            <h2 class="text-center d-none d-sm-block d-lg-none">portfolio</h2>
+                            <h4 class="text-center d-sm-none d-lg-none">portfolio</h4>
+                        </div>
+                        <div class="col-6 align-self-end "><a href="contact.html">CONTACT</a></div>
+                        <div class="col-6 align-self-end text-end"><a href="cv.html">CV</a></div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!--<div>
+        <div class="lines"></div>
+    </div> -->
+    <main class="container-fluid py-5 text-center justify-content-center align-content-center">
+        <quote class="row m-0 p-1 g-1 g-lg-2 text-center justify-content-center align-content-center my-5">
+            <div class="col-10"> 
+                <div class="card d-none d-sm-block">
+                    <div class="card-header ">
+                            Quote
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p>A well-known quote, contained in a blockquote element.</p>
+                            <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                        </blockquote>
+                    </div>
+                </div>
+            </div>
+        </quote>                    
+        
+        <menu class="row g-1 g-lg-2 text-center justify-content-center align-content-center m-0 my-5 p-0"> 
+            
+                <div class="container-fluid pt-5">
+                <div class="row g-1 g-lg-2 text-center justify-content-center align-content-center">
+
+                    <div class="col-10 text-center">
+                        <div class="menu-box position-relative ">
+                            <a href="#photos">
+                                <h5 class="position-absolute top-50 start-50 translate-middle">PHOTOS</h5>
+                                <img class="photos-img" src="resources/buildingtop.JPEG" alt="photo">
+                                <div class="position-absolute top-0 start-0 overlay h-100 w-100">
+                                    <h5 class="position-absolute top-50 start-50 translate-middle">PHOTOS</h5>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-10 col-xl-5 ">
+                        <div class="menu-box position-relative text-center">
+                            <a href="#physicalart">                        
+                                <h5 class="position-absolute top-50 start-50 translate-middle">PHYSICAL ART</h5>
+                                <img class="phys-art-img" src="resources/pylväs.JPG.jpg" alt="">
+                                <div class="position-absolute top-0 start-0 overlay h-100 w-100">
+                                    <h5 class="position-absolute top-50 start-50 translate-middle">PHYSICAL ART</h5>
+                                </div>
+                            </a> 
+                        </div>
+                    </div>
+                    <div class="col-10 col-xl-5 ">
+                        <div class="menu-box position-relative text-center">
+                            <a href="#digitalart">
+                                <h5 class="position-absolute top-50 start-50 translate-middle">DIGITAL ART</h5>
+                                <img class="digi-art-img" src="resources/naulanreikakamera.jpg" alt="">
+                                <div class="position-absolute top-0 start-0 overlay h-100 w-100">
+                                    <h5 class="position-absolute top-50 start-50 translate-middle">DIGITAL ART</h5>
+                                </div>
+                            </a>
+                        </div> 
+                    </div>
+                    <div class="col-10">
+                        <div class="menu-box position-relative text-center">
+                            <a href="#webdesign">
+                                <h5 class="position-absolute top-50 start-50 translate-middle">WEB DESIGN</h5>
+                                <img class="web-design-img" src="resources/buildingside.JPG" alt="">
+                                <div class="position-absolute top-0 start-0 overlay h-100 w-100">
+                                    <h5 class="position-absolute top-50 start-50 translate-middle">WEB DESIGN</h5>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </menu>   
+        <content>
+            <div class="container-fluid pt-5">
+                <div class="row g-5 my-5 text-center justify-content-center align-content-center">
+                    <div class="col-10 my-5">
+                        <div class="album text-center justify-content-center align-content-center">
+                            <h3 id="photos" class="text-start">PHOTOS</h3>
+                            <div id="carousel1" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                              <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carousel1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carousel1" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carousel1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                              </div>
+                              <div class="carousel-inner">
+                                <div class="carousel-item active" data-bs-interval="10000">
+                                  <img src="resources/buildingtop.JPEG" alt="...">
+                                </div>
+                                <div class="carousel-item" data-bs-interval="2000">
+                                  <img src="resources/IMG_2233.JPG.jpg" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                  <img src="resources/IMG_3775.JPEG" alt="...">
+                                </div>
+                              </div>
+                              <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                              </button>
+                              <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                              </button>
+                            </div>
+                      </div>
+                    </div>
+                    <div class="col-10 my-5">
+                        <div class="album">
+                            <h3 id="physicalart" class="text-end">PHYSICAL ART</h3>
+                            <div id="carousel2" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                  <button type="button" data-bs-target="#carousel2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carousel2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carousel2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-bs-interval="10000">
+                                      <img src="resources/buildingtop.JPEG" alt="...">
+                                    </div>
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img src="resources/IMG_3774.JPEG" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="resources/IMG_2237.JPG.jpg" alt="...">
+                                  </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>
+                              </div>
+                        </div>
+                    </div>
+                    <div class="col-10 my-5">
+                        <div class="album">
+                            <h3 id="digitalart" class="text-start">DIGITAL ART</h3>
+                            <div id="carousel3" class="carousel carousel-dark slide bg-white" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                  <button type="button" data-bs-target="#carousel3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carousel3" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carousel3" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-bs-interval="10000">
+                                      <img src="resources/rex&maggie.png" alt="...">
+                                    </div>
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img src="resources/IMG_3774.JPEG" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="resources/IMG_2237.JPG.jpg" alt="...">
+                                  </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>
+                              </div>
+                        </div>
+                    </div>
+                    <div class="col-10 my-5">
+                        <div class="album p-1 pt-3">
+                            <h3 id="webdesign" class="text-end">WEB DESIGN</h3>
+                            <div id="carousel4" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                  <button type="button" data-bs-target="#carousel4" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                  <button type="button" data-bs-target="#carousel4" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                  <button type="button" data-bs-target="#carousel4" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-bs-interval="10000">
+                                      <img src="resources/buildingtop.JPEG" alt="...">
+                                    </div>
+                                  <div class="carousel-item" data-bs-interval="2000">
+                                    <img src="resources/IMG_3774.JPEG" alt="...">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="resources/IMG_2237.JPG.jpg" alt="...">
+                                  </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carousel4" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carousel4" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>
+                              </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </content>
+    </main>
+    <footer>
+        footer
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+</body>
+</html>
