done but not really

--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="position-relative">
-        <nav class="p-5 position-absolute top-50 start-50 translate-middle">         
+        <nav class="p-md-5 position-absolute top-50 start-50 translate-middle">         
             <div class="container-fluid"> 
                 <div class="m-2 px-2">
                     <div class="row ">
@@ -32,8 +32,8 @@
             </div>
         </nav>
     </header>
-    <main>
-
+    <main class="container">
+        <img class="mx-auto w-100" src="resources/Eng CV.png" alt="CV">
     </main>
     <footer>
 
