--- a/about.html
+++ b/about.html
@@ -35,30 +35,32 @@
     </header>
     <main>
         <content>
-            <profile class="position-relative m-5 p-5">
-                <profileParts >
-                    <profileName class="position-absolute">
-                        <h1>
-                            Tea Salonsaari
-                        </h1>
-                    </profileName>
-                    <profileImage class="position-absolute">
-                        <img src="resources/IMG_3778.JPEG" class="rounded-circle" alt="...">
+            <div class="container py-5">
+                <profile class="">
+                    <profileImage class="ratio ratio-1x1">
+                        <img src="resources/pyry.jpg" class="rounded-circle "  alt="...">
                     </profileImage>
-                    <profileText class="position-absolute">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                            aliquip ex ea commodo consequat. Duis aute irure dolor in
-                            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                            qui officia deserunt mollit anim id est laborum.
-                        </p>
-                    </profileText>
-                </profileParts>
+                    <profileCard class="card my-5">
+                        <profileName class="card-body text-center">
+                            <h3>
+                                Tea Salonsaari
+                            </h3>
+                        </profileName>
+                        <profileText class="card-text mx-auto">
+                            <p class="p-3">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                aliquip ex ea commodo consequat. Duis aute irure dolor in
+                                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                                qui officia deserunt mollit anim id est laborum.
+                            </p>
+                        </profileText>
+                    </profileCard>
+                </profile>
+            </div>
 
-            </profile>
         </content>
     </main>
     <footer>
