--- a/cv.html
+++ b/cv.html
@@ -14,29 +14,51 @@
 </head>
 <body>
     <header class="position-relative">
-        <nav class="p-md-5 position-absolute top-50 start-50 translate-middle">         
+        <nav class="p-5 position-absolute top-50 start-50 translate-middle d-none d-sm-block rounded">         
             <div class="container-fluid"> 
                 <div class="m-2 px-2">
                     <div class="row ">
-                        <div class="col-6 "><a href="index.html">HOME</a></div>
-                        <div class="col-6 text-end"><a href="about.html" >ABOUT</a></div>
+                        <div class="col-6 "><a href="index.html">hoMe</a></div>
+                        <div class="col-6 text-end"><a href="about.html" >aBout</a></div>
                         <div class="col-12 align-self-center">                            
-                            <h1 class="text-center d-none d-lg-block">portfolio</h1>
-                            <h2 class="text-center d-none d-sm-block d-lg-none">portfolio</h2>
-                            <h4 class="text-center d-sm-none d-lg-none">portfolio</h4>
+                            <h1 class="text-center d-none d-lg-block">poRtfolio</h1>
+                            <h2 class="text-center d-none d-sm-block d-lg-none">poRtfolio</h2>
+                            <h4 class="text-center d-sm-none d-lg-none">poRtfolio</h4>
                         </div>
-                        <div class="col-6 align-self-end "><a href="contact.html">CONTACT</a></div>
-                        <div class="col-6 align-self-end text-end"><p class="navi-off">CV</p></div>
+                        <div class="col-6 align-self-end "><a href="contact.html">contAct</a></div>
+                        <div class="col-6 align-self-end text-end"><p class="navi-off">cV</p></div>
                     </div>
                 </div>
             </div>
         </nav>
+        <div class="navbar navbar-dark d-sm-none fixed-top border border-light bg-black">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">Portfolio</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html">aBout</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">contAct</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="cv.html">cV</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+  
+          </div>
     </header>
     <main class="container">
         <img class="mx-auto w-100" src="resources/Eng CV.png" alt="CV">
     </main>
     <footer>
-
+        &COPY; Tea Salonsaari 2022
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
