issues with file extension capital format causing files to not load now fixed

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                           <div class="row g-2">
                               <button class="btn col-md-6 btn col-xxl-4" data-bs-toggle="modal" data-bs-target="#paintingModal">
                                 <div class=" ratio ratio-1x1">
-                                  <img class="rounded" src="resources/art/1.PNG"  alt="">
+                                  <img class="rounded" src="resources/art/1.png"  alt="">
                                 </div>
                               </button>
                               <button class="btn col-md-6 btn col-xxl-4" data-bs-toggle="modal" data-bs-target="#paintingModal2">
@@ -649,12 +649,12 @@
                               </button>
                               <button class="btn col-md-6 btn col-xxl-4" data-bs-toggle="modal" data-bs-target="#paintingModal11">
                                 <div class=" ratio ratio-1x1">
-                                  <img class="rounded" src="resources/art/11.GIF"  alt="">
+                                  <img class="rounded" src="resources/art/11.gif"  alt="">
                                 </div>
                               </button>
                               <button class="btn col-md-6 btn col-xxl-4" data-bs-toggle="modal" data-bs-target="#paintingModal12">
                                 <div class=" ratio ratio-1x1">
-                                  <img class="rounded" src="resources/art/12.PNG"  alt="">
+                                  <img class="rounded" src="resources/art/12.png"  alt="">
                                 </div>
                               </button>
                               <button class="btn col-md-6 btn col-xxl-4" data-bs-toggle="modal" data-bs-target="#paintingModal13">
@@ -671,7 +671,7 @@
                                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                      <img class="img-fluid" src="resources/art/1.PNG"  alt="">
+                                      <img class="img-fluid" src="resources/art/1.png"  alt="">
                                     </div>
                                   </div>
                                 </div>
@@ -827,7 +827,7 @@
                                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                      <img class="img-fluid" src="resources/art/12.PNG"  alt="">
+                                      <img class="img-fluid" src="resources/art/12.png"  alt="">
                                     </div>
                                   </div>
                                 </div>
