--- a/cv.html
+++ b/cv.html
@@ -58,7 +58,7 @@
         <img class="mx-auto w-100" src="resources/Eng CV.png" alt="CV">
     </main>
     <footer>
-        &COPY; Tea Salonsaari 2022
+        &COPY; Tea Salonsaari
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
