--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
                                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
-                                      <img class="img-fluid" src="resources/art/11.GIF"  alt="">
+                                      <img class="img-fluid" src="resources/art/11.gif"  alt="">
                                     </div>
                                   </div>
                                 </div>
@@ -1010,7 +1010,7 @@
         </div>
     </main>
     <footer>
-        &COPY; Tea Salonsaari 2022
+        &COPY; Tea Salonsaari
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
