updated bc didnt like the look, still not sure and missing some embellishments

--- a/about.html
+++ b/about.html
@@ -77,9 +77,9 @@
                             </p>
                             <p>I enjoy problem-solving and helping others, and own a can-do attitude. I believe one can always find something to improve on in oneself, so I take constructive criticism well and have the will to always learn something new and constantly develop myself to be better.     
                             </p>
-                            <p>In case you need more information, do not hesitate to contact me. 
-                            </p>
-                            <p>Sincerely yours, Tea Salonsaari </p>
+                            <p>In case you need more information, do not hesitate to <a href="contact.html">contact me! </a></p>
+                            
+                            <p>Tea Salonsaari </p>
                         </div>
                     </div>
                     </profileCard>
