--- a/cv.html
+++ b/cv.html
@@ -55,7 +55,7 @@
           </div>
     </header>
     <main class="container">
-        <img class="mx-auto w-100" src="resources/Eng CV.png" alt="CV">
+        <img class="mx-auto w-100" src="resources/CV.png" alt="CV">
     </main>
     <footer>
         &COPY; Tea Salonsaari
