--- a/contact.html
+++ b/contact.html
@@ -54,43 +54,35 @@
   
           </div>
     </header>
-    <main class="py-5">
+    <main class="py-5" >
         <h2 class="text-center">contAct Me here</h2>
-        <contact class="px-auto">
-            <icons class="container">
-                <div class="row g-4 py-4 ">
-                    <div class="col-lg-12 text-start">
-                        <a href="mailto:teasalonsaari99@gmail.com">
-                            <img src="resources/email-round-icon.svg" class="rounded-circle" alt="">
+        <contact class="px-auto ">
+            <icons class="container justify-content-center align-content-center">
+                <div>
+                    
+                        <a href="mailto:teasalonsaari99@gmail.com" target="_blank">
+                            <img class="rounded mx-auto my-2 d-block" src="resources/email-round-icon.svg" alt="">
+                        </a>                       
+                        <a href="https://www.facebook.com/tea.salonsaari/" target="_blank">
+                            <img class="rounded mx-auto my-2 d-block" src="resources/facebook-round-icon.svg"  alt="">
                         </a>
-                    </div>
-                         <div class="col-lg-12 text-start">
-                        <a href="https://www.facebook.com/tea.salonsaari/">
-                            <img src="resources/facebook-round-icon.svg" class="rounded-circle" alt="">
-                        </a>
-                    </div>
-                </div> 
-                <div class="row g-4 ">
-                    <div class="col-lg-1">
                         <a href="https://www.youtube.com/channel/UCPEdHywK7Oi69W9-dJ2rCJg">
-                            <img src="resources/youtube-round-icon.svg" class="rounded-circle" alt="">
+                            <img class="rounded mx-auto my-2 d-block" src="resources/youtube-round-icon.svg"  alt="">
                         </a>
-                    </div>
-                    <div class="col-lg-1 ">
-                        <a href="https://github.com/teatea136">
-                            <img src="resources/github-icon.svg" class="rounded-circle" alt="">
+
+                        <a href="https://github.com/teatea136" target="_blank">
+                            <img class="rounded mx-auto my-2 d-block" src="resources/github-icon.svg"  alt="">
                         </a>
-                    </div>
-                    <div class="col-lg-1 ">
-                        <a href="https://fi.pinterest.com/satean669/">
-                            <img src="resources/pinterest-round-icon.svg" class="rounded-circle" alt="">
+
+                        <a href="https://fi.pinterest.com/satean669/" target="_blank">
+                            <img class="rounded mx-auto my-2 d-block" src="resources/pinterest-round-icon.svg"  alt="">
                         </a>
-                    </div>
-                    <div class="col-lg-12 text-start icons3">
-                        <a href="https://www.linkedin.com/in/tea136/">
-                            <img src="resources/linkedin-round-icon.svg" class="rounded-circle" alt="">
+
+                        <a href="https://www.linkedin.com/in/tea136/" target="_blank">
+                            <img class="rounded mx-auto my-2 d-block" src="resources/linkedin-round-icon.svg"  alt="">
                         </a>
-                    </div>
+                         
+
                 </div>            
             </icons>
         </contact>
