added new content to digital media

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                     </div>
                     <div class="col-12">
                         <div class="menu-box position-relative text-center bg-secondary rounded ">
-                            <a href="#UI/UX">
+                            <a href="#web">
                                 <img src="resources/web/web3.png" alt="">
-                                <h5 class="position-absolute top-50 start-50 translate-middle">ui/uX</h5>
+                                <h5 class="position-absolute top-50 start-50 translate-middle">DiGiiAl MediA</h5>
                                 <div class="position-absolute top-0 start-0 overlay h-100 w-100">
-                                    <h5 class="position-absolute top-50 start-50 translate-middle">ui/uX</h5>
+                                    <h5 class="position-absolute top-50 start-50 translate-middle">DiGiiAl MediA</h5>
                                 </div>
                             </a>
                         </div>
@@ -1004,12 +1004,12 @@
                 </div>
               </div>
             </div>   
-            <div class="container-fluid album px-0" id="UI/UX">
+            <div class="container-fluid album px-0" id="web">
               <div class="row my-5 text-center justify-content-center align-content-center">
                 <div class="col-12 my-5">
                   <div class="card mb-3 px-5 pb-5" >
                     <div class="card-body">
-                      <h5 class="card-title p-4" style="color: whitesmoke;">ui/uX</h5>
+                      <h5 class="card-title p-4" style="color: whitesmoke;">DiGiiAl MediA</h5>
                       <div class="row g-4 ">
                         <button class="btn" data-bs-toggle="modal" data-bs-target="#webModal">
                           <div class=" ratio ratio-4x3">
@@ -1029,6 +1029,16 @@
                         <button class="btn" data-bs-toggle="modal" data-bs-target="#webModal3">
                           <div class=" ratio ratio-4x3">
                             <img class="rounded" src="resources/web/web3.png"  alt="">
+                          </div>
+                        </button>
+                        <button class="btn" data-bs-toggle="modal" data-bs-target="#webModal4">
+                          <div class=" ratio ratio-4x3">
+                            <img class="rounded" src="resources/web/web4.png"  alt="">
+                          </div>
+                        </button>
+                        <button class="btn" data-bs-toggle="modal" data-bs-target="#webModal5">
+                          <div class=" ratio ratio-4x3">
+                            <img class="rounded" src="resources/web/web5.png"  alt="">
                           </div>
                         </button>
                         <div class="modal fade" id="webModal" tabindex="-1" aria-labelledby="webModalLabel1" aria-hidden="true">
@@ -1079,6 +1089,32 @@
                               </div>
                               <div class="modal-body">
                                 <img class="img-fluid" src="resources/web/web3.png"  alt="">
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="modal fade" id="webModal4" tabindex="-1" aria-labelledby="webModalLabel5" aria-hidden="true">
+                          <div class="modal-dialog modal-xl">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="webModalLabel5">Lindström CASE poster</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body">
+                                <img class="img-fluid" src="resources/web/web4.png"  alt="">
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="modal fade" id="webModal5" tabindex="-1" aria-labelledby="webModalLabel6" aria-hidden="true">
+                          <div class="modal-dialog modal-xl">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="webModalLabel6">Lindström CASE alternative poster</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body">
+                                <img class="img-fluid" src="resources/web/web5.png"  alt="">
                               </div>
                             </div>
                           </div>
