--- a/about.html
+++ b/about.html
@@ -73,11 +73,11 @@
                     </profileName>   
                     <div class="card">                        
                         <div class="card-body mx-auto">
-                            <p> I am currently in my first year of studies for a Bachelor of Business Administration and Digital Service Design at Laurea University of Applied Sciences. I am looking for a job in the IT field as it would benefit my future career. My current goals are to gain experience relating to user interface design and user experience development as those have been the most interesting to me.
+                            <p> I am currently in my second year of studies for a Bachelor of Business Administration and Digital Service Design at Laurea University of Applied Sciences. I am open to work or internship in development, design and/or marketing. My current goals are to gain experience relating to user interface design and user experience development as those interest me greatly.
                             </p>
                             <p>I enjoy problem-solving and helping others, and own a can-do attitude. I believe one can always find something to improve on in oneself, so I take constructive criticism well and have the will to always learn something new and constantly develop myself to be better.     
                             </p>
-                            <p>In case you need more information, do not hesitate to <a href="contact.html">contact me! </a></p>
+                            <p>In case you need more information or are interested in hiring me, do not hesitate to <a href="contact.html">contact me! </a></p>
                             
                             <p>Tea Salonsaari </p>
                         </div>
