--- a/index.html
+++ b/index.html
@@ -4,56 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Major+Mono+Display&family=Stylish&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Corben&family=Diphylleia&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="resources/favicon.ico" type="image/icon type">
     <title>portfolio</title>
 </head>
 <body>
-    <header class="position-relative">
-        <nav class="p-5 position-absolute top-50 start-50 translate-middle d-none d-sm-block rounded">         
-            <div class="container-fluid"> 
-                <div class="m-2 px-2">
-                    <div class="row ">
-                        <div class="col-6 "><p class="navi-off">home</p></div>
-                        <div class="col-6 text-end"><a href="about.html" >about</a></div>
-                        <div class="col-12 align-self-center">                            
-                            <h1 class="text-center d-none d-lg-block">portfolio</h1>
-                            <h2 class="text-center d-none d-sm-block d-lg-none">portfolio</h2>
-                            <h4 class="text-center d-sm-none d-lg-none">portfolio</h4>
-                        </div>
-                        <div class="col-6 align-self-end "><a href="contact.html">contact</a></div>
-                        <div class="col-6 align-self-end text-end"><a href="cv.html">CV</a></div>
-                    </div>
-                </div>
+  <header class="position-relative">
+    <nav class="p-5 position-absolute top-50 start-50 translate-middle d-none d-sm-block rounded">         
+      <div class="container-fluid"> 
+        <div class="m-2 px-2">
+          <div class="row ">
+            <div class="col-6 "><p class="navi-off">home</p></div>
+            <div class="col-6 text-end"><a href="about.html" >about</a></div>
+            <div class="col-12 align-self-center">                            
+              <h1 class="text-center d-none d-lg-block">portfolio</h1>
+              <h2 class="text-center d-none d-sm-block d-lg-none">portfolio</h2>
+              <h4 class="text-center d-sm-none d-lg-none">portfolio</h4>
             </div>
-        </nav>            
-        <div class="navbar navbar-dark d-sm-none fixed-top border border-light bg-black">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">about</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="cv.html">CV</a>
-                </li>
-              </ul>
-            </div>
+            <div class="col-6 align-self-end "><a href="contact.html">contact</a></div>
+            <div class="col-6 align-self-end text-end"><a href="cv.html">CV</a></div>
           </div>
-
+          </div>
         </div>
-    </header>
+    </nav>            
+    <div class="navbar navbar-dark d-sm-none fixed-top border border-light bg-black">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Portfolio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">about</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cv.html">CV</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </header>
     <!--<div>
         <div class="lines"></div>
     </div> 
