new color palette and other updates

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </nav>
-        <div class="navbar navbar-dark d-sm-none fixed-top border border-light bg-black">
+        <div class="navbar bg-body-tertiary d-sm-none sticky-top" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">portfolio</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,6 +39,9 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">home</a>
+                    </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html">about</a>
                   </li>
@@ -53,34 +56,38 @@
             </div>
         </div>
     </header>
-    <main class="py-5" >
-        <h2 class="text-center">contact me here</h2>
-        <contact class="px-auto ">
-            <icons class="container justify-content-center align-content-center">
-                <div>
-                    <a href="https://www.linkedin.com/in/tea136/" target="_blank">
-                        <img class="rounded mx-auto my-2 d-block" src="resources/linkedin-round-icon.svg"  alt="">
-                    </a>
-                    <a href="mailto:teasalonsaari99@gmail.com" target="_blank">
-                        <img class="rounded mx-auto my-2 d-block" src="resources/email-round-icon.svg" alt="">
-                    </a>                       
-                    <a href="https://www.facebook.com/tea.salonsaari/" target="_blank">
-                        <img class="rounded mx-auto my-2 d-block" src="resources/facebook-round-icon.svg"  alt="">
-                    </a>
-                    <a href="https://www.youtube.com/channel/UCPEdHywK7Oi69W9-dJ2rCJg">
-                        <img class="rounded mx-auto my-2 d-block" src="resources/youtube-round-icon.svg"  alt="">
-                    </a>
+    <main class="container text-center justify-content-center align-content-center">
+        <sisalto class="card">
+            <div class="card-body">
+                <h3 class="text-center card-title">contact me here</h3>
+                <contact class="px-auto ">
+                    <icons class="container justify-content-center align-content-center">
+                        <div>
+                            <a href="https://www.linkedin.com/in/tea136/" target="_blank">
+                                <img class="rounded mx-auto my-2" src="resources/linkedin-round-icon.svg"  alt="">
+                            </a>
+                            <a href="mailto:teasalonsaari99@gmail.com" target="_blank">
+                                <img class="rounded mx-auto my-2" src="resources/email-round-icon.svg" alt="">
+                            </a>                       
+                            <a href="https://www.facebook.com/tea.salonsaari/" target="_blank">
+                                <img class="rounded mx-auto my-2" src="resources/facebook-round-icon.svg"  alt="">
+                            </a>
+                            <a href="https://www.youtube.com/channel/UCPEdHywK7Oi69W9-dJ2rCJg" target="_blank">
+                                <img class="rounded mx-auto my-2" src="resources/youtube-round-icon.svg"  alt="">
+                            </a>
 
-                    <a href="https://github.com/teatea136" target="_blank">
-                        <img class="rounded mx-auto my-2 d-block" src="resources/github-icon.svg"  alt="">
-                    </a>
+                            <a href="https://github.com/teatea136" target="_blank">
+                                <img class="rounded mx-auto my-2" src="resources/github-icon.svg"  alt="">
+                            </a>
 
-                    <a href="https://fi.pinterest.com/satean669/" target="_blank">
-                        <img class="rounded mx-auto my-2 d-block" src="resources/pinterest-round-icon.svg"  alt="">
-                    </a>
-                </div>            
-            </icons>
-        </contact>
+                            <a href="https://fi.pinterest.com/satean669/" target="_blank">
+                                <img class="rounded mx-auto my-2" src="resources/pinterest-round-icon.svg"  alt="">
+                            </a>
+                        </div>            
+                    </icons>
+                </contact>
+            </div>
+        </sisalto>
     </main>
     <footer>
         &COPY; Tea Salonsaari
