--- a/cv.html
+++ b/cv.html
@@ -31,14 +31,17 @@
                 </div>
             </div>
         </nav>
-        <div class="navbar navbar-dark d-sm-none fixed-top border border-light bg-black">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">portfolio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+        <div class="navbar bg-body-tertiary d-sm-none sticky-top" data-bs-theme="dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link" href="index.html">home</a>
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html">about</a>
                   </li>
