--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="p-5 position-absolute top-50 start-50 translate-middle d-none d-sm-block rounded">         
       <div class="container-fluid"> 
         <div class="m-2 px-2">
-          <div class="row ">
+          <div class="row">
             <div class="col-6 "><p class="navi-off">home</p></div>
             <div class="col-6 text-end"><a href="about.html" >about</a></div>
             <div class="col-12 align-self-center">                            
@@ -31,14 +31,17 @@
           </div>
         </div>
     </nav>            
-    <div class="navbar navbar-dark d-sm-none fixed-top border border-light bg-black">
+    <div class="navbar bg-body-tertiary d-sm-none sticky-top" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Portfolio</a>
+        <a class="navbar-brand" href="index.html">portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="index.html">home</a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">about</a>
             </li>
