redoing index/landing page, not finished

--- a/index.html
+++ b/index.html
@@ -69,24 +69,8 @@
               </mininav>
             </div>
     -->
-    <main class="container text-center justify-content-center align-content-center">
-      <sisalto class="card">
-        <korttinavi class="card-header">
-          <ul class="nav justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">PROJECTS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">PHOTOS</a>
-            </li>
-          </ul>
-        </korttinavi>
 
-        <album class="album">
-
-        </album>
-      </sisalto>
-        <!--<div class="col-12 col-sm-11 mx-auto">
+<div class="col-12 col-sm-11 mx-auto">
           <content>
             <div class="container album px-0" id="photos">
               <div class="row my-5 text-center justify-content-center align-content-center">
@@ -1091,7 +1075,7 @@
               </div>
             </div>       
           </content>
-        </div>-->
+        </div>
     </main>
     <footer>
         &COPY; Tea Salonsaari
