changed some old typography

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 <div class="menu-box position-relative text-center bg-secondary rounded ">
                         <a href="#photos"> 
                             <img src="resources/img/4.jpg" alt="photo">
-                            <h5 class="position-absolute top-50 start-50 translate-middle">photoGraphy</h5>
+                            <h5 class="position-absolute top-50 start-50 translate-middle">Photography</h5>
                             <div class="position-absolute top-0 start-0 overlay h-100 w-100">
-                                <h5 class="position-absolute top-50 start-50 translate-middle">photoGraphy</h5>
+                                <h5 class="position-absolute top-50 start-50 translate-middle">Photography</h5>
                             </div>
                         </a>
                     </div>
@@ -90,9 +90,9 @@
                     <div class="menu-box position-relative text-center bg-secondary rounded ">
                         <a href="#sketches">
                             <img src="resources/sketch/2.jpg" alt="button to sketches">
-                            <h5 class="position-absolute top-50 start-50 translate-middle">sKetcHes</h5>
+                            <h5 class="position-absolute top-50 start-50 translate-middle">Sketches</h5>
                             <div class="position-absolute top-0 start-0 overlay h-100 w-100">
-                                <h5 class="position-absolute top-50 start-50 translate-middle">sKetcHes</h5>
+                                <h5 class="position-absolute top-50 start-50 translate-middle">Sketches</h5>
                             </div>
                         </a>
                     </div> 
@@ -101,9 +101,9 @@
                     <div class="menu-box position-relative text-center bg-secondary rounded ">
                         <a href="#web">
                             <img src="resources/web/web3.png" alt="">
-                            <h5 class="position-absolute top-50 start-50 translate-middle">DiGiiAl MediA</h5>
+                            <h5 class="position-absolute top-50 start-50 translate-middle">Digital Media</h5>
                             <div class="position-absolute top-0 start-0 overlay h-100 w-100">
-                                <h5 class="position-absolute top-50 start-50 translate-middle">DiGiiAl MediA</h5>
+                                <h5 class="position-absolute top-50 start-50 translate-middle">Digital Media</h5>
                             </div>
                         </a>
                     </div>
@@ -119,7 +119,7 @@
                 <div class="col-12 my-5">
                   <div class="card mb-3 px-5 pb-5" >
                     <div class="card-body">
-                      <h5 class="card-title p-4" style="color: whitesmoke;">photoGraphy</h5>
+                      <h5 class="card-title p-4" style="color: whitesmoke;">photography</h5>
                       <div class="row g-4 ">
                             <button class=" btn" data-bs-toggle="modal" data-bs-target="#photoModal">
                               <div class=" ratio ratio-4x3">
@@ -843,7 +843,7 @@
                 <div class="col-12 my-5">
                   <div class="card mb-3 px-5 pb-5" >
                     <div class="card-body">
-                        <h5 class="card-title p-4" style="color: whitesmoke;">sKetcHes</h5>
+                        <h5 class="card-title p-4" style="color: whitesmoke;">sketches</h5>
                       <div class="row g-4">
                         <button class="btn" data-bs-toggle="modal" data-bs-target="#sketchModal">
                           <div class=" ratio ratio-4x3">
@@ -1000,7 +1000,7 @@
                 <div class="col-12 my-5">
                   <div class="card mb-3 px-5 pb-5" >
                     <div class="card-body">
-                      <h5 class="card-title p-4" style="color: whitesmoke;">DiGiiAl MediA</h5>
+                      <h5 class="card-title p-4" style="color: whitesmoke;">Digital media</h5>
                       <div class="row g-4 ">
                         <button class="btn" data-bs-toggle="modal" data-bs-target="#webModal">
                           <div class=" ratio ratio-4x3">
