messing with index buttons

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                     <profileCard class="col-12 col-md-6 my-auto">                    
                         <profileName class="card-title">
                         <h3>
-                            Little about me and my goals
+                            a Little about me and my goals
                         </h3>
                     </profileName>   
                        
